// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findScene find a scene 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": "Cantina",
          "type": "text",
        },
      ],
      "level": 2,
      "type": "heading",
    },
    Object {
      "content": Array [
        Object {
          "content": "The cantina is full with your crew having a good time",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "name": "cantina",
}
`;

exports[`player play book introduction if no actions 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "choose_your_story",
  },
]
`;

exports[`player play cantina scene on cantina target 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "choose_your_story",
  },
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "the_space_ship",
  },
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "cantina",
  },
]
`;

exports[`player play second level 2 scene on start 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "choose_your_story",
  },
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "the_space_ship",
  },
]
`;
